--- a/src/Resources/contao/templates/mod_next_prev_pageimage.html.twig
+++ b/src/Resources/contao/templates/mod_next_prev_pageimage.html.twig
@@ -24,7 +24,11 @@
 
             <span class="next-prev__title">{{ prev.title }}</span>
         </a>
+    {% else %}
+        {# Placeholder / disabled prev #}
+        <span class="next-prev__link next-prev__link--prev next-prev__link--disabled" aria-hidden="true"></span>
     {% endif %}
+
 
     {% if next %}
         <a class="next-prev__link next-prev__link--next" href="{{ next.href }}">
@@ -42,6 +46,9 @@
                     <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"></path>
                 </svg></span>
         </a>
+    {% else %}
+        {# Placeholder / disabled next #}
+        <span class="next-prev__link next-prev__link--next next-prev__link--disabled" aria-hidden="true"></span>
     {% endif %}
 
 </nav>
