--- a/src/Resources/public/css/next_prev_pageimage.css
+++ b/src/Resources/public/css/next_prev_pageimage.css
@@ -11,12 +11,17 @@
   box-shadow: 0 0.5px 2.5px rgba(0, 0, 0, 0.1);
 }
 .next-prev-nav .next-prev__link {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5em;
+  white-space: nowrap;
   border: 1px solid oklch(97.466% 0.011 259.822deg);
   border-radius: 0.4em;
 }
 .next-prev-nav .next-prev__link .next-prev__title {
   padding: 0.5em 1em 0.5em 0.5em;
   margin-right: -0.5em;
+  white-space: nowrap;
 }
 .next-prev-nav .next-prev__link svg {
   display: flex;
