--- a/src/Resources/public/scss/next_prev_pageimage.scss
+++ b/src/Resources/public/scss/next_prev_pageimage.scss
@@ -18,6 +18,7 @@
         white-space: nowrap;        // verhindert Umbruch im Link
         border: 1px solid oklch(0.97466 0.011 259.822);
         border-radius: 0.4em;
+        line-height: 1; //nimmt platz unten weg
         figure {
             padding: 0;
             margin: 0;
